...
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/tab_color"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_detail_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_poster"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/backgrounds/scenic" />
...
                app:cardBackgroundColor="@color/title_poster"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/tv_detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="@string/dummy_rating" />
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/btn_detail_favorite"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_heart_unselected"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_detail_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_detail_title"
                    android:contentDescription="@string/favorite_button" />


                <TextView
...
                    app:layout_constraintEnd_toStartOf="@+id/btn_detail_favorite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    tools:text="@string/dummy_text" />

                <TextView
                    android:id="@+id/tv_detail_tagline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/btn_detail_back"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/back_button"
                        android:src="@drawable/ic_chevron_left"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_detail_toolbar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/ubuntu_medium"
                        android:gravity="center"
                        android:maxLines="2"
                        android:textColor="@color/text_main"
                        android:textSize="24sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_detail_share"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/btn_detail_back"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/movies" />

                    <ImageButton
                        android:id="@+id/btn_detail_share"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@android:color/transparent"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_detail_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:contentDescription="@string/backdrop_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_detail_backdrop" />

            <TextView
                android:id="@+id/tv_detail_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre" />

            <TextView
                android:id="@+id/tv_detail_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_year" />

            <TextView
                android:id="@+id/tv_detail_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingHorizontal="24dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
...
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_overview" />

            <TextView
                android:id="@+id/tv_detail_homepage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"

                android:paddingHorizontal="24dp"
...
