<resources>
    <string name="app_name">Cat Film</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="movies">Movies</string>
    <string name="movie_list">Discover Movies</string>
    <string name="tv_show_list">Discover Tv Shows</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet</string>
    <string name="movie_poster">movie poster</string>
    <string name="genre">Genre</string>
    <string name="year">Release Date</string>
    <string name="dummy_rating">10.0</string>
    <string name="dummy_release_date">12 December 2017</string>
    <string name="overview">Overview</string>
    <string name="dummy_overview">After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only meta-human who was created in the wake of the accelerator explosion and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it won\'t be long before the world learns what Barry Allen has become The Flash.</string>
    <string name="back_button">back button</string>
    <string name="text_company">Copyright \u00A9 Ichungelo Inc - 2022\nAll Right reserved.</string>
    <string name="company_logo">company logo</string>
    <string name="share_button">share button</string>
    <string name="homepage">Homepage</string>
    <string name="dummyweb">www.dummyweb.com</string>
    <string name="backdrop_image">backdrop image</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_button">favorite button</string>
    <string name="app_logo">app logo</string>
    <string name="go_to_favorites">go to favorites</string>
    <string name="search_movies">Search Movies..</string>
    <string name="search_tv_shows">Search Tv Shows..</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite_tv_shows">Favorite Tv Shows</string>
    <string name="dummy_year">2018</string>
    <string name="favorite_movies_hint">Search Favorite Movies..</string>
    <string name="favorite_tv_show_hint">Search Favorite Tv Shows..</string>
    <string name="tv_bg_search">Your search result will appear here</string>
    <string name="text_noresult_search">Try another keywords or edit your filters!</string>
    <string name="add_movies_advice">Add movies from discover or search.</string>
    <string name="add_tv_shows_advice">Add tv shows from discover or search</string>
</resources>