<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragment.movies.MoviesFragment">

    <Button
        android:id="@+id/btn_search_movies"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_search"
        android:drawableLeft="@drawable/ic_search"
        android:drawableTint="?android:attr/textColorSecondary"
        android:elevation="0dp"
        android:gravity="start"
        android:hint="@string/search_movies"
        android:selectAllOnFocus="false"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorSecondary"
        app:backgroundTint="@color/black"
        app:backgroundTintMode="screen"
        app:layout_constraintEnd_toStartOf="@+id/btn_movies_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        tools:targetApi="m" />

    <ImageButton
        android:id="@+id/btn_movies_favorite"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toBottomOf="@+id/btn_search_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_search_movies"
        android:contentDescription="@string/go_to_favorites" />

    <TextView
        android:id="@+id/tv_movie_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:drawablePadding="10dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/movie_list"
        android:textColor="@color/text_main"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/ic_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search_movies" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_list"
        tools:listitem="@layout/items_poster" />

    <ProgressBar
        android:id="@+id/progress_movies"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_progress"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>